[package]
name = "qust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
srand = "0.4.0"
num-complex = "0.4.0"
#ndarray = "0.15.4"
ndarray = { version = "0.15.4", features = ["blas"] }
cblas-sys = "0.1.4"
